--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "gen-parser": "node bin/genparser"
   },
   "devDependencies": {
+    "chromatica": "^0.0.3",
+    "express": "^4.16.4",
     "jison": "^0.4.18",
     "mocha": "^5.2.0"
   }
