--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "gen-parser": "node bin/genparser"
   },
   "devDependencies": {
+    "body-parser": "^1.18.3",
     "chromatica": "^0.0.3",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "jison": "^0.4.18",
     "mocha": "^5.2.0"
