--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "lyriql",
-  "version": "1.0.0",
+  "description": "An alternative to GraphQL designed to make nested data processing easier and more intuitive.",
+  "version": "0.0.1",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
