--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "description": "An alternative to GraphQL designed to make nested data processing easier and more intuitive.",
   "version": "0.0.1",
   "main": "index.js",
+  "repository": "git@github.com:jgnewman/lyriql",
+  "author": "John <rescuecreative@gmail.com>",
   "license": "MIT",
   "scripts": {
     "test": "mocha",
