--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "lyriql",
   "description": "An alternative to GraphQL designed to make nested data processing easier and more intuitive.",
   "version": "0.0.1",
-  "main": "index.js",
+  "main": "src/index.js",
   "repository": "git@github.com:jgnewman/lyriql",
   "author": "John <rescuecreative@gmail.com>",
   "license": "MIT",
