--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
   "name": "lyriql",
-  "description": "An alternative to GraphQL designed to make nested data processing easier and more intuitive.",
-  "version": "0.0.4",
+  "description": "An alternative to GraphQL designed to make nested data processing easier, faster, and more intuitive.",
+  "version": "0.1.0",
   "main": "src/index.js",
   "repository": "git@github.com:jgnewman/lyriql",
   "author": "John <rescuecreative@gmail.com>",
   "license": "MIT",
+  "engines" : {
+    "node" : ">=10.0.0"
+  },
   "scripts": {
     "test": "mocha",
     "dev": "nodemon bin/devserver",
-    "gen-parser": "node bin/genparser",
     "run-concept": "node bin/runconcept"
   },
   "devDependencies": {
     "body-parser": "^1.18.3",
-    "chromatica": "^0.0.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
-    "jison": "^0.4.18",
     "mocha": "^5.2.0",
-    "nodemon": "^1.18.6"
+    "nodemon": "^1.18.6",
+    "sinon": "^7.2.3"
   }
 }
